# notes

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  book.toml  dp_rodcutting.ipynb  mermaid-init.js  notes.cabal  run.fish  scratch.md
.github/workflows/: mdbook.yml  rust.yml  tests.yml
app/: Main.hs
libnotes/: Cargo.toml
libnotes/data/: input.txt
libnotes/src/: lib.rs  selfref.rs
notebook/: Cargo.toml  book.toml
notebook/src/: SUMMARY.md  about.md  code.md  harper_ctt.md  lib.rs  me.md  mscs.md  open_source.md  posts.md
notebook/src/mscs/: ilp.rs  mod.rs  rodcutting.rs
notebook/src/oss/: flyer.rs
notes-app/: Cargo.toml  README.md
notes-app/src/: app.rs  main.rs
src/: 5065.md  5414.md  SUMMARY.md  about.md  app.rs  bauer_algeff.md  code.md  dev_notes_20230912.md  distsys_rs.md  dotsync.md  editorials.md  flyer.rs  harper_ctt.md  me.md  mscs.md  part1.md  workflow.md
src-lib/: Notes.hs
src/mscs/: mod.rs
src/oss/: mod.rs
test/: Main.hs
