cabal-version:      3.4
name:               notes
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Damien Stanton
maintainer:         damien.stanton@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Notes
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   src-lib
    default-language: GHC2021

executable notes
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        notes
    hs-source-dirs:   app
    default-language: GHC2021

test-suite notes-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        notes,
        hspec,
        hspec-contrib,
        QuickCheck,
        HUnit
